--- a/sobre/sobre.html
+++ b/sobre/sobre.html
@@ -18,6 +18,7 @@
                     <li><a href="../perfis/perfis.html">Perfis</a></li>
                 </ul>
                 <select>
+                    <!-- porque você optou por option ?  -->
                     <option value="../index.html">Home</option>
                     <option value="sobre.html">Sobre</option>
                     <option value="../perfis/perfis.html">Perfis</option>
